41. Allow switching of players in 'Player settings' and 'Extra player
    settings' dialogs.
42. In MAI view show album cover and artist image before text.
43. Strip headers from MAI text, as duplicates own headers.
44. Fix MAI view image sizes.
45. Center align all MAI titles.
46. Provide a default backdrop image to use in browse view, with option to
    disable.

3.5.6
-----
1. Fix showing popup messages from server based settings pages.
2. Fix toast messages being obscured.
3. Try harder to ensure we don't hide duplicate images when listing items in
   favourites.
4. Try to get portrait MAI covers to be rounded.
5. Set MAI 'h1', 'h2', and 'h3' elements to standard font-size.

3.5.5
-----
 1. Fix subtoolbar subtitle not always updating.
 2. Fix colour of lists in dialogs when using Black theme.
 3. Darker snackbar/toast background for Black theme.
 4. Set splitter width to zero when queue hidden.
 5. Tweak borders.
 6. Show track tech info, and background images, if enabled, for track list
    when click on album name in now-playing.
 7. If queue only has 1 item with no duration, then center the "1 Track" text.
 8. If "track" custom actions are defined, then always keep composer, etc,
    details in now-playing for use in actions.
 9. Only show "Go to composer", etc., items in now-playing context menu if
    configured to show relevant artist role.
10. Use alternative blur for now-playing backgroud, so that works with
    WebKitGTK.
11. Pre-cache HighDPI covers, thanks to Michael Herger.
12. Fix display of subtoolbar sub-title on biographies and album reviews.

3.5.4
-----
1. Fix missing album review for streaming services.
2. Remove commas from "performed by", etc. in desktop now-playing bar.

3.5.3
-----
1. Update translations.
2. Dim more player details in 'Manage players' dialog for switched off
   players.
3. Fix now-playing covers for old browsers (e.g. old iOS) that don't support
   CSS min()
4. Change "Performed by" to "performed by", etc.